Major restructure, replace SDL with GLFW

--- a/Source/Test/Test.csproj
+++ b/Source/Test/Test.csproj
@@ -13,8 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="../ARenderer/ARenderer.csproj" />
-		<ProjectReference Include="..\..\External\SdlSharp\Source\SdlSharp\SdlSharp.csproj" />
+		<ProjectReference Include="..\AppThing\AppThing.csproj" />
 	</ItemGroup>
 
 
