Start work on GUI

--- a/Source/Test/Test.csproj
+++ b/Source/Test/Test.csproj
@@ -18,6 +18,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\AppThing\AppThing.csproj" />
+		<ProjectReference Include="..\GuiThing\GuiThing.csproj" />
 	</ItemGroup>
 
 
