--- a/Source/Test/Test.csproj
+++ b/Source/Test/Test.csproj
@@ -17,11 +17,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.0" />
+		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.3" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\RenderThing\RenderThing.csproj" />
+		<ProjectReference Include="..\WindowThing\WindowThing.csproj" />
 	</ItemGroup>
 
 </Project>
