--- a/Source/WindowThing/WindowThing.csproj
+++ b/Source/WindowThing/WindowThing.csproj
@@ -18,6 +18,8 @@
 		<None Include="../../NativeLibs/win-x64/glfw3.dll" Link="runtimes/win-x64/native/glfw3.dll" CopyToOutputDirectory="Always" />
 		<None Include="../../NativeLibs/osx-x64/libglfw.dylib" Link="runtimes/osx-x64/native/libglfw.dylib" CopyToOutputDirectory="Always" />
 		<None Include="../../NativeLibs/osx-x64/libfreetype.dylib" Link="runtimes/osx-x64/native/libfreetype.dylib" CopyToOutputDirectory="Always" />
+		<None Include="../../NativeLibs/linux-x64/libglfw.so.3.3" Link="runtimes/linux-x64/native/libglfw.so" CopyToOutputDirectory="Always" />
+		<None Include="../../NativeLibs/linux-x64/libfreetype.so.6.20.1" Link="runtimes/linux-x64/native/libfreetype.so" CopyToOutputDirectory="Always" />
 	</ItemGroup>
 
 </Project>
